[Sravan Kumar] Refactored . Lamda expression Problems code structure according to java 8 version